--- a/NEO-NEEDS.html
+++ b/NEO-NEEDS.html
@@ -7,6 +7,16 @@
         <title>Smart Data - Application</title>
     </head>
     <body>
+    <div class="menu" onclick="myFunction(this)">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+    </div>
+        <script>
+            function myFunction(x) {
+                x.classList.toggle("change");
+            }
+        </script>
         <div class="container">
             <header>
                 <div class="primary_header">
