Finished designing webpages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="scores.html">View Previous Scores</a>
         <a href="login.html">Login</a>
         <a href="signup.html">Signup</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="container">
@@ -27,75 +28,6 @@
         </header>
         <section>
             <h2 class="noDisplay">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
-            <article class="left_article">
-                <h3>Behavior</h3>
-                <form action="">
-                    <input type="radio" name="behavior" value="1"> Appropriate<br>
-                    <input type="radio" name="behavior" value="2"> Drowsy: Decreased Activity but Responds Appropriately<br>
-                    <input type="radio" name="behavior" value="3"> Lethargic: Decreased Activity with Minimal Response to Stimulation<br>
-                </form>
-                <h3>Cardiovascular</h3>
-                <form action="">
-                    <input type="radio" name="cardiovascular" value="1"> Capillary Refill
-                    <2 Sec, HR 110-160 and MAPs Stable<br>
-                        <input type="radio" name="cardiovascular" value="2"> Capillary Refill
-                        <5 Sec<br>
-                            <input type="radio" name="cardiovascular" value="3"> HR > 160 for 1 Hr<br>
-                            <input type="radio" name="cardiovascular" value="4"> Mean Arterial Pressure(MAP)
-                            <10% FromPrior 24 Hrs<br>
-                                <input type="radio" name="cardiovascular" value="5"> Capillary Refill >5 Sec<br>
-                                <input type="radio" name="cardiovascular" value="6"> HR > 160 for 2 Hrs<br>
-                                <input type="radio" name="cardiovascular" value="7"> Episode HR
-                                <100<br>
-                                    <input type="radio" name="cardiovascular" value="8"> MAP Unstable Requiring Pressors<br>
-                </form>
-                <h3>Respiratory</h3>
-                <form action="">
-                    <input type="radio" name="respiratory" value="1"> No Apnea/Desat Episodes. No Change in Current Settings or RR<br>
-                    <input type="radio" name="respiratory" value="2"> Apnea/Desat Self-Limited<br>
-                    <input type="radio" name="respiratory" value="3"> RR >60 for 1Hr<br>
-                    <input type="radio" name="respiratory" value="4"> Using Accessory Muscles<br>
-                    <input type="radio" name="respiratory" value="5"> Increase Periodic Breathing<br>
-                    <input type="radio" name="respiratory" value="6"> Increase Fi02 >10% FromPrior 24 Hrs<br>
-                    <input type="radio" name="respiratory" value="7"> Apnea/Desat Requiring Stimulation/Baging<br>
-                    <input type="radio" name="respiratory" value="8"> Increase RR (ie >=80) with or without Retractions<br>
-                    <input type="radio" name="respiratory" value="9"> Increase in Respiratory Support(ie Increasing Vent Pressures or Method of Ventilation)<br>
-                </form>
-                <h3>Abdominal</h3>
-                <form action="">
-                    <input type="radio" name="abdominal" value="1"> Soft, Non-Distended, Non-Tender, Normoactive Bowel Sounds<br>
-                    <input type="radio" name="abdominal" value="2"> Slightly Distended Abdomen (1 cm FromBaseline)
-                    <5 Sec<br>
-                        <input type="radio" name="abdominal" value="3"> Hypoactive Bowel Sounds for 2 min<br>
-                        <input type="radio" name="abdominal" value="4"> Distended Abdomen (>3 cm FromBaseline)<br>
-                        <input type="radio" name="abdominal" value="5"> No Bowel Sounds for 5 min<br>
-                        <input type="radio" name="abdominal" value="6"> Guarding/Tender<br>
-                        <input type="radio" name="abdominal" value="7"> Hemoccult Positive Stools<br>
-                </form>
-                <h3>Feeds</h3>
-                <form action="">
-                    <input type="radio" name="feeds" value="1"> NOT Feeding<br>
-                    <input type="radio" name="feeds" value="2"> Tolerating Bolus, No Residuals, No Emesis<br>
-                    <input type="radio" name="feeds" value="3"> Emesis/Residuals >10% Volume, Partially Digested<br>
-                    <input type="radio" name="feeds" value="4"> Emesis/Residuals >20% Volume<br>
-                    <input type="radio" name="feeds" value="5"> Discolored (Bilious) Residuals/Emesis<br>
-                </form>
-                <h3>BW
-                    < 1000g OR GA < 28 wks</h3>
-                        <form action="">
-                            <input type="radio" name="bwga" value="1"> No<br>
-                            <input type="radio" name="bwga" value="2"> Yes<br>
-                        </form>
-                        <h3>Formula Feeds</h3>
-                        <form action="">
-                            <input type="radio" name="formula" value="1"> No<br>
-                            <input type="radio" name="formula" value="2"> Yes<br>
-                        </form>
-                        <p>
-                            <button type="button">Calculate</button>
-                        </p>
-                        <h3>(NeoNEEDS) Total Score: </h3>
-            </article>
         </section>
     </div>
 </body>
