--- a/signup.html
+++ b/signup.html
@@ -17,6 +17,7 @@
         <a href="scores.html">View Previous Scores</a>
         <a href="login.html">Login</a>
         <a href="signup.html">Signup</a>
+        <a href="index.html">Home</a>
     </div>
     <div class="container">
         <form class="inputs">
@@ -30,7 +31,7 @@
             <input type="text" name="Password2"><br>
         </form>
         <div class="signup">
-            <a href="#">Sign up</a>
+            <button type="button">Sign up</button>
         </div>
     </div>
 </body>
