Removed username and chnaged email

--- a/signup.html
+++ b/signup.html
@@ -25,8 +25,7 @@
             <input type="text" name="Firstname"><br> Last name:<br>
             <input type="text" name="Lastname"><br>Email Address:<br>
             <input type="text" name="EmailAddress"><br>Location:<br>
-            <input type="text" name="Location"><br>Username:<br>
-            <input type="text" name="Username"><br>Password:<br>
+            <input type="text" name="Location"><br><br>Password:<br>
             <input type="text" name="Password"><br>Retype Password:<br>
             <input type="text" name="Password2"><br>
         </form>
