working with w3 css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="coolStyle.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="indexJava.js"></script>
     <title>Smart Data - Application</title>
 </head>
@@ -19,17 +20,12 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
     </div>
-
-    <div class="container">
-        <header>
-            <div class="primary_header">
-                <h1 class="title"> SMART DATA FOR NICU </h1>
-            </div>
-        </header>
-        <section>
-            <h2 class="noDisplay">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
-        </section>
-    </div>
+    <header>
+        <div class="w3-container w3-black w3-cell-middle w3-center">
+            <h1 class="title"> SMART DATA FOR NICU </h1>
+            <h2 class="w3-container w3-black">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
+        </div>
+    </header>
 </body>
 
 </html>
