--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="coolStyle.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="indexJava.js"></script>
     <title>Sign Up</title>
 </head>
@@ -19,20 +20,24 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
     </div>
-    <div class="container">
+    <div class="w3-card-2 w3-center w3-margin w3-blue-grey" style="width: auto">
+
+        <h1>Sign Up!</h1>
+
         <form class="inputs">
             First name:<br>
-            <input type="text" name="Firstname"><br> Last name:<br>
-            <input type="text" name="Lastname"><br>Email Address:<br>
-            <input type="text" name="EmailAddress"><br>Location:<br>
-            <input type="text" name="Location"><br>Username:<br>
-            <input type="text" name="Username"><br>Password:<br>
-            <input type="text" name="Password"><br>Retype Password:<br>
-            <input type="text" name="Password2"><br>
+            <input class="w3-input" type="text" name="Firstname"><br> Last name:<br>
+            <input class="w3-input" type="text" name="Lastname"><br>Email Address:<br>
+            <input class="w3-input" type="text" name="EmailAddress"><br>Location:<br>
+            <input class="w3-input" type="text" name="Location"><br>Username:<br>
+            <input class="w3-input" type="text" name="Username"><br>Password:<br>
+            <input class="w3-input" type="text" name="Password"><br>Retype Password:<br>
+            <input class="w3-input" type="text" name="Password2"><br>
         </form>
         <div class="signup">
-            <button type="button">Sign up</button>
+            <button class="w3-btn w3-light-blue">Sign up</button>
         </div>
+        <br>
     </div>
 </body>
 
