it looks kinda better

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="index.html">Home</a>
     </div>
     <header>
-        <div class="w3-container w3-black w3-cell-middle w3-center">
+        <div class="w3-container w3-blue-gray w3-cell-middle w3-center">
             <h1 class="title"> SMART DATA FOR NICU </h1>
-            <h2 class="w3-container w3-black">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
+            <h2 class="w3-container w3-blue-gray">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
         </div>
     </header>
 </body>
