--- a/login.html
+++ b/login.html
@@ -20,15 +20,17 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
     </div>
-    <div class="container">
+    <div class="w3-card-2 w3-center w3-margin w3-blue-grey">
+        <h1>Login!</h1>
         <form class="inputs">
             Email:<br>
-            <input type="text" name="Email"><br> Password:<br>
-            <input type="text" name="Password"><br>
+            <input class="w3-input" type="text" name="Email"><br> Password:<br>
+            <input class="w3-input" type="text" name="Password"><br>
         </form>
         <div class="signup">
-            <button type="button">Login</button><br>
-            <button type="button">Forgot Password / Username?</button>
+            <button class="w3-btn w3-black">Login</button><br><br>
+
+            <button class="w3-btn w3-black">Forgot Password / Username?</button>
         </div>
     </div>
 </body>
