--- a/scores.html
+++ b/scores.html
@@ -20,17 +20,17 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
     </div>
-    <div class="container">
+    <div class="w3-card-2 w3-center w3-margin w3-blue-grey">
         <div class="inputs">
             <form class="inputs">
                 ID:
-                <input type="text" name="id">
+                <input class="w3-input" name="id">
             </form>
 
         </div>
         <br>
         <br>
-        <table style="width:50%" class="table">
+        <table class="w3-table-all w3-centered w3-text-black w3-blue w3-hoverable">
             <tr>
                 <th>Date</th>
                 <th>Time</th>
