--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
             <input class="w3-input" type="text" name="Password2"><br>
         </form>
         <div class="signup">
-            <button class="w3-btn w3-light-blue">Sign up</button>
+            <button class="w3-btn w3-black">Sign up</button>
         </div>
         <br>
     </div>
