--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <h1 class="title"> SMART DATA FOR NICU </h1>
             <h2 class="w3-container w3-blue-gray">Necrotizing Enterocolitis Early Warning System (Neo NEEDS)</h2>
         </div>
+        <div class="w3-card w3-center w3-blue">
+            <h3>About / How to Use </h3>
+            <p>Keep track of information about your patients here</p>
+        </div>
     </header>
 </body>
 
