--- a/calculate.html
+++ b/calculate.html
@@ -19,6 +19,7 @@
         <a href="login.html">Login</a>
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
+        <a href="database.html">DataBase</a>
     </div>
     <div class="container w3-container w3-blue-grey">
         <div class="form">
