--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="login.html">Login</a>
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
+        <a href="database.html">DataBase</a>
     </div>
     <header>
         <div class="w3-container w3-blue-gray w3-cell-middle w3-center">
