added search page

--- a/database.html
+++ b/database.html
@@ -35,6 +35,7 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
         <a href="database.html">DataBase</a>
+        <a href="search.html">Search</a>
     </div>
     <div class="mainDiv" align="center">
         <h1 align="center"> FirebaseDataBase</h1>
