--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
         <a href="database.html">DataBase</a>
+        <a href="search.html">Search</a>
     </div>
     <header>
         <div class="w3-container w3-blue-gray w3-cell-middle w3-center">
