--- a/calculate.html
+++ b/calculate.html
@@ -20,6 +20,7 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
         <a href="database.html">DataBase</a>
+        <a href="search.html">Search</a>
     </div>
     <div class="container w3-container w3-blue-grey">
         <div class="form">
