--- a/login.html
+++ b/login.html
@@ -35,6 +35,7 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
         <a href="database.html">DataBase</a>
+        <a href="search.html">Search</a>
     </div>
     <div class="w3-card-2 w3-center w3-margin w3-blue-grey">
         <h1>Login!</h1>
