--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,7 @@
         <a href="signup.html">Signup</a>
         <a href="index.html">Home</a>
         <a href="database.html">DataBase</a>
+        <a href="search.html">Search</a>
     </div>
     <div class="w3-card-2 w3-center w3-margin w3-blue-grey" style="width: auto">
 
