Added simple vue js and sample data

--- a/sampleDisplay.html
+++ b/sampleDisplay.html
@@ -15,13 +15,13 @@
             messagingSenderId: "560677342632"
         };
         firebase.initializeApp(config);
-
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="coolStyle.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="indexJava.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title>Login</title>
 </head>
 
@@ -41,11 +41,17 @@
         <div class="w3-card-4 column">
 
             <header class="w3-container w3-blue">
-                <h1>Bed 1</h1>
+                <a href="#" onclick="toggle_visibility('bed1');">
+                    <h1>Bed 1</h1>
+                </a>
             </header>
 
-            <div class="w3-container">
-                <p>Heart Rate = 65</p>
+            <div id="bed1" class="w3-container hidden">
+
+                <li v-for="vector in vectors">
+                    {{ vector.text }}
+                </li>
+
             </div>
 
             <footer class="w3-container w3-green">
@@ -56,11 +62,17 @@
         <div class="w3-card-4 column">
 
             <header class="w3-container w3-blue">
-                <h1>Bed 2</h1>
+                <a href="#" onclick="toggle_visibility('bed2');">
+                    <h1>Bed 2</h1>
+                </a>
             </header>
 
-            <div class="w3-container">
-                <p>Heart Rate = 80</p>
+            <div id="bed2" class="w3-container hidden">
+                <ul>
+                    <li v-for="vector in vectors">
+                        {{ vector.text }}
+                    </li>
+                </ul>
             </div>
 
             <footer class="w3-container w3-yellow">
@@ -68,22 +80,97 @@
             </footer>
 
         </div>
-        <div class="w3-card-4 column">
-
-            <header class="w3-container w3-blue">
-                <h1>Bed 3</h1>
-            </header>
-
-            <div class="w3-container">
-                <p>Heart Rate = 120</p>
-            </div>
-
-            <footer class="w3-container w3-red">
-                <h5>Needs Immediate Assistance </h5>
-            </footer>
-
-        </div>
     </div>
 </body>
+<script>
+    var app2 = new Vue({
+        el: '#bed2',
+        data: {
+            vectors: [{
+                    text: 'Behavior Appropriate'
+                },
+                {
+                    text: 'Cap Refill < 2'
+                }, {
+                    text: 'Heart Rate Stable'
+                }, {
+                    text: ' Mean Arterial pressure Stable'
+                },
+                {
+                    text: 'Apnea None'
+                },
+                {
+                    text: 'Respiratory Rate No Change'
+                },
+                {
+                    text: 'Bowel Sounds Normoactive'
+                },
+                {
+                    text: 'Abdomen Signs Soft , Non distended, nontender'
+                },
+                {
+                    text: "Emesis None"
+                }
+
+            ]
+        }
+    })
+</script>
+<script>
+    var app1 = new Vue({
+        el: '#bed1',
+        data: {
+            vectors: [{
+                    text: 'cap refill 2'
+                },
+                {
+                    text: 'HR 139'
+                },
+                {
+                    text: 'MAP 37'
+                },
+                {
+                    text: 'RR 48'
+                },
+                {
+                    text: 'WOB none'
+                },
+                {
+                    text: 'FiO2 0.21'
+                },
+                {
+                    text: 'Support Room Air'
+                },
+                {
+                    text: 'Assessment soft, nontender'
+                },
+                {
+                    text: 'Girth 26'
+                },
+                {
+                    text: "sounds normoactive"
+                },
+                {
+                    text: "emesis no"
+                },
+                {
+                    text: "residuals no"
+                },
+                {
+                    text: "feed volume"
+                },
+            ]
+        }
+    })
+</script>
+<script type="text/javascript">
+    function toggle_visibility(id) {
+        var e = document.getElementById(id);
+        if (e.style.display == 'block')
+            e.style.display = 'none';
+        else
+            e.style.display = 'block';
+    }
+</script>
 
 </html>
