--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="coolStyle.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="indexJava.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title>Smart Data - Application</title>
 </head>
 
