--- a/sample2.html
+++ b/sample2.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="indexJava.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <title>Login</title>
+    <title>Sample</title>
 </head>
 
 <body>
@@ -80,9 +80,12 @@
             </footer>
 
         </div>
-        <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+        <a href="sample3.html">
+            <button type="button">Next Day</button>
+        </a>
+        <a href="sampleDisplay.html">
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -100,10 +103,10 @@
                     text: ' Mean Arterial pressure Stable'
                 },
                 {
-                    text: 'Apnea None'
+                    text: 'Apnea Self Limited'
                 },
                 {
-                    text: 'Respiratory Rate No Change'
+                    text: 'Respiratory >60 for 1 hour'
                 },
                 {
                     text: 'Bowel Sounds Normoactive'
@@ -127,13 +130,13 @@
                     text: 'cap refill 2'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 154'
                 },
                 {
-                    text: 'MAP 37'
+                    text: 'MAP 36'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 52'
                 },
                 {
                     text: 'WOB none'
@@ -157,7 +160,7 @@
                     text: "emesis no"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 1"
                 },
                 {
                     text: "feed volume"
