--- a/sample5.html
+++ b/sample5.html
@@ -54,8 +54,8 @@
 
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-yellow">
+                <h5>At risk</h5>
             </footer>
 
         </div>
@@ -75,14 +75,17 @@
                 </ul>
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-yellow">
+                <h5>At Risk</h5>
             </footer>
 
         </div>
-        <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+        <a href="sample6.html">
+            <button type="button">Next Day</button>
+        </a>
+        <a href="sample4.html">
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -112,7 +115,7 @@
                     text: 'Abdomen Signs Soft , Non distended, nontender'
                 },
                 {
-                    text: "Emesis None"
+                    text: "Emesis > 10% Volume"
                 }
 
             ]
@@ -124,25 +127,25 @@
         el: '#bed1',
         data: {
             vectors: [{
-                    text: 'cap refill 2'
+                    text: 'cap refill 3'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 170'
                 },
                 {
-                    text: 'MAP 37'
+                    text: 'MAP 32'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 62'
                 },
                 {
-                    text: 'WOB none'
+                    text: 'WOB Moderate Retractions'
                 },
                 {
-                    text: 'FiO2 0.21'
+                    text: 'FiO2 0.3'
                 },
                 {
-                    text: 'Support Room Air'
+                    text: 'Support Room Nasal CPAP'
                 },
                 {
                     text: 'Assessment soft, nontender'
@@ -154,13 +157,13 @@
                     text: "sounds normoactive"
                 },
                 {
-                    text: "emesis no"
+                    text: "emesis 1"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 2"
                 },
                 {
-                    text: "feed volume"
+                    text: "feed volume 20"
                 },
             ]
         }
