--- a/sample6.html
+++ b/sample6.html
@@ -54,8 +54,8 @@
 
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-yellow">
+                <h5>at risk</h5>
             </footer>
 
         </div>
@@ -75,14 +75,17 @@
                 </ul>
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-yellow">
+                <h5>At Risk</h5>
             </footer>
 
         </div>
-        <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+        <a href="sample7.html">
+            <button type="button">Next Day</button>
+        </a>
+        <a href="sample5.html">
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -95,24 +98,24 @@
                 {
                     text: 'Cap Refill < 2'
                 }, {
-                    text: 'Heart Rate Stable'
+                    text: 'Heart Rate > 160 for two hours'
                 }, {
                     text: ' Mean Arterial pressure Stable'
                 },
                 {
-                    text: 'Apnea None'
+                    text: 'Apnea self limited'
                 },
                 {
-                    text: 'Respiratory Rate No Change'
+                    text: 'Respiratory Rate >60 for 1 hour'
                 },
                 {
-                    text: 'Bowel Sounds Normoactive'
+                    text: 'Bowel Sounds hypoactive for 2 min'
                 },
                 {
-                    text: 'Abdomen Signs Soft , Non distended, nontender'
+                    text: 'Abdomen Signs slightly distended'
                 },
                 {
-                    text: "Emesis None"
+                    text: "Emesis >10% volume "
                 }
 
             ]
@@ -127,22 +130,22 @@
                     text: 'cap refill 2'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 162'
                 },
                 {
-                    text: 'MAP 37'
+                    text: 'MAP 34'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 60'
                 },
                 {
-                    text: 'WOB none'
+                    text: 'WOB mild retractions'
                 },
                 {
                     text: 'FiO2 0.21'
                 },
                 {
-                    text: 'Support Room Air'
+                    text: 'Support Room Nasal CPAP'
                 },
                 {
                     text: 'Assessment soft, nontender'
@@ -157,10 +160,10 @@
                     text: "emesis no"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 1"
                 },
                 {
-                    text: "feed volume"
+                    text: "feed volume 20"
                 },
             ]
         }
