--- a/sample3.html
+++ b/sample3.html
@@ -80,9 +80,12 @@
             </footer>
 
         </div>
+        <a href="sample4.html">
+            <button type="button">Next Day</button>
+        </a>
         <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -127,13 +130,13 @@
                     text: 'cap refill 2'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 156'
                 },
                 {
                     text: 'MAP 37'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 56'
                 },
                 {
                     text: 'WOB none'
@@ -157,7 +160,7 @@
                     text: "emesis no"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 2"
                 },
                 {
                     text: "feed volume"
