--- a/sample4.html
+++ b/sample4.html
@@ -75,14 +75,17 @@
                 </ul>
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-yellow">
+                <h5>At Risk</h5>
             </footer>
 
         </div>
-        <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+        <a href="sample5.html">
+            <button type="button">Next Day</button>
+        </a>
+        <a href="sample3.html">
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -95,9 +98,9 @@
                 {
                     text: 'Cap Refill < 2'
                 }, {
-                    text: 'Heart Rate Stable'
+                    text: 'Heart Rate Stable >160 for two hours'
                 }, {
-                    text: ' Mean Arterial pressure Stable'
+                    text: ' Mean Arterial pressure <10% from prior 24 hours'
                 },
                 {
                     text: 'Apnea None'
@@ -127,22 +130,22 @@
                     text: 'cap refill 2'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 168'
                 },
                 {
-                    text: 'MAP 37'
+                    text: 'MAP 35'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 59'
                 },
                 {
-                    text: 'WOB none'
+                    text: 'WOB mild retractions'
                 },
                 {
-                    text: 'FiO2 0.21'
+                    text: 'FiO2 0.25'
                 },
                 {
-                    text: 'Support Room Air'
+                    text: 'Nasal CPAP'
                 },
                 {
                     text: 'Assessment soft, nontender'
@@ -157,10 +160,10 @@
                     text: "emesis no"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 2"
                 },
                 {
-                    text: "feed volume"
+                    text: "feed volume 20"
                 },
             ]
         }
