--- a/sample7.html
+++ b/sample7.html
@@ -75,14 +75,14 @@
                 </ul>
             </div>
 
-            <footer class="w3-container w3-green">
-                <h5>Safe</h5>
+            <footer class="w3-container w3-red">
+                <h5>Needs Assitance</h5>
             </footer>
 
         </div>
-        <a href="sample2.html">
-        <button type = "button">Next Day</button>
-    </a>
+        <a href="sample5.html">
+            <button type="button">Prev Day</button>
+        </a>
     </div>
 </body>
 <script>
@@ -95,24 +95,24 @@
                 {
                     text: 'Cap Refill < 2'
                 }, {
-                    text: 'Heart Rate Stable'
+                    text: 'Heart Rate 160 for two hours'
                 }, {
-                    text: ' Mean Arterial pressure Stable'
+                    text: ' Mean Arterial pressure < 10% from prior 24 hours'
                 },
                 {
-                    text: 'Apnea None'
+                    text: 'Apnea self limited'
                 },
                 {
-                    text: 'Respiratory Rate No Change'
+                    text: 'Respiratory Rate > 60 for 1 hour'
                 },
                 {
-                    text: 'Bowel Sounds Normoactive'
+                    text: 'Bowel Sounds hypoactive for 2 min'
                 },
                 {
-                    text: 'Abdomen Signs Soft , Non distended, nontender'
+                    text: 'Abdomen Signs slightly distended'
                 },
                 {
-                    text: "Emesis None"
+                    text: "Emesis >10% volume"
                 }
 
             ]
@@ -127,13 +127,13 @@
                     text: 'cap refill 2'
                 },
                 {
-                    text: 'HR 139'
+                    text: 'HR 149'
                 },
                 {
-                    text: 'MAP 37'
+                    text: 'MAP 36'
                 },
                 {
-                    text: 'RR 48'
+                    text: 'RR 52'
                 },
                 {
                     text: 'WOB none'
@@ -142,7 +142,7 @@
                     text: 'FiO2 0.21'
                 },
                 {
-                    text: 'Support Room Air'
+                    text: 'Support Room Nasal CPAP'
                 },
                 {
                     text: 'Assessment soft, nontender'
@@ -157,10 +157,10 @@
                     text: "emesis no"
                 },
                 {
-                    text: "residuals no"
+                    text: "residuals 1"
                 },
                 {
-                    text: "feed volume"
+                    text: "feed volume 20"
                 },
             ]
         }
