--- a/connectiontest.html
+++ b/connectiontest.html
@@ -6,8 +6,8 @@
    <body>
       <?php
          $dbhost = 'localhost:3036';
-         $dbuser = 'guest1';
-         $dbpass = 'guest1a';
+         $dbuser = 'hammerschmiks';
+         $dbpass = 'Hamm3rschmidt1';
          $conn = mysql_connect($dbhost, $dbuser, $dbpass);
       
          if(! $conn ) {
