--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="login.html">Login</a>
+        <a href="login.php">Login</a>
     </div>
     <header>
         <div class="w3-container w3-blue-gray w3-cell-middle w3-center">
