--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="login.php">Login</a>
+        <a href="register.php">Register</a>
     </div>
     <header>
         <div class="w3-container w3-blue-gray w3-cell-middle w3-center">
