it works but looks bad

--- a/calculate.html
+++ b/calculate.html
@@ -14,7 +14,7 @@
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="historical.html">Historical</a>
+        <a href="historical.php">Historical</a>
         <a href="display.php">Current Patients</a>
     </div>
     <div class="container w3-container w3-blue-grey">
