added logout and fixed menus

--- a/calculate.html
+++ b/calculate.html
@@ -16,6 +16,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="historical.php">Historical</a>
         <a href="display.php">Current Patients</a>
+        <a href="index.html">Logout</a>
     </div>
     <div class="container w3-container w3-blue-grey">
         <form action="calculate.php">
